@@ -45,11 +45,3 @@ modules: 1
 # Set this to the directory containing your debomatic modules
 modulespath: /etc/debomatic/modules
 
-
-
-# Checks section
-[checks]
-
-# Set this option to 1 if you want to enable lintian support
-lintian: 0
-
