@@ -1,3 +1,6 @@
+  113 Luca Falavigna	2008-12-02
+      Implement lintian support as a module
+
   112 Luca Falavigna	2008-12-01
       Implement modules core components
 
